# vizml

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/vizml/: SimpleLinearRegression.py  __init__.py  _dashboard_configs.py  base_models.py  cost_functions.py  dashboard.py  data_generator.py  error_metrics.py  sample.py  utils.py
src/vizml/adaboost_classifier/: classification.py  dashboard.py
src/vizml/bagging_classifier/: classification.py  dashboard.py
src/vizml/dbscan/: clustering.py  dashboard.py
src/vizml/decision_tree/: classification.py  dashboard.py
src/vizml/k_means_clustering/: clustering.py  dashboard.py
src/vizml/k_nearest_neighbours/: classification.py  dashboard.py
src/vizml/logistic_regression/: classification.py  dashboard.py
src/vizml/metrics/: classification_metrics.py  clustering_metrics.py  regression_metrics.py
src/vizml/multi_linear_regression/: dashboard.py  regression.py
src/vizml/naive_bayes/: classification.py  dashboard.py
src/vizml/polynomial_regression/: dashboard.py  regression.py
src/vizml/random_forest_classifier/: classification.py
tests/: test_normal_1d_generator.py  test_normal_2d_generator.py  test_sample.py  test_utils.py
tests/test_data_generators/: test_circle_data_generator.py  test_floating_point_generator.py  test_linear_1d_generator.py  test_linear_2d_generator.py  test_linear_3d_generator.py  test_linearly_separable_2d_generator.py  test_linearly_separable_3d_generator.py  test_moon_2d_generator.py  test_moon_3d_generator.py  test_normal_1d_generator.py  test_normal_2d_generator.py  test_normal_3d_generator.py  test_spherical_data_generator.py
tests/test_models/: test_adaboost_classifier.py  test_bagging_classifier.py  test_dbscan.py  test_decision_tree.py  test_k_means_clustering.py  test_k_nearest_neighbors.py  test_linear_regression.py  test_logistic_regression.py  test_multi_linear_regression.py  test_naive_bayes.py  test_polynomial_regression.py  test_random_forest_classifier.py  test_simple_linear_regression.py  test_support_vector_machines.py
(+4 files in other folders)
