[metadata]
name = vizml
description = Project to visualise popular ML algorithms
author = Chinmaya Srivata
license = Apache-2.0 License
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    vizml
install_requires =
    pandas>=1.3
    numpy>=1.21
package_dir =
    =src
zip_safe = no