[metadata]
name = vizml
description = Project to visualise popular ML algorithms
author = Chinmaya Srivata
license = Apache-2.0 License
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    vizml
install_requires =
    pandas>=1.3
    numpy>=1.21
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.2
    pytest-cov>=3.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
vizml = py.typed

[flake8]
max-line-length = 160