[metadata]
name = vizml
description = Project to visualise popular ML algorithms
author = Chinmaya Srivata
license = Apache-2.0 License
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    pandas>=1.3
    numpy>=1.22
    scikit-learn>=1.0
    plotly>=5.5
    dash>=2.0

package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.2
    pytest-cov>=3.0
    mypy>=0.931
    flake8>=4.0
    tox>=3.24

[options.package_data]
vizml = py.typed

[flake8]
max-line-length = 160
per-file-ignores = __init__.py:F401

[options.packages.find]
where=src
